--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "react": "^19.2.0",
     "react-datepicker": "^8.9.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.17",
     "zustand": "^5.0.8"
